2001-05-01  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-win.c (construct_priv): #ifdef FIXME call
	to gtk_menu_bar_set_shadow_type().

2001-05-01  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-selector-widget.c: #include
	<libgnome/gnome-preferences.h> instead of
	<libgnomeui/gnome-uidefs.h>.
	* bonobo/bonobo-ui-sync-static.c: Likewise.

	* bonobo/bonobo-ui-sync-menu.c: #include
	<libgnome/gnome-preferences.h> instead of
	<libgnomeui/gnome-preferences.h>.
	* bonobo/bonobo-ui-sync-toolbar.c: Likewise.
	* bonobo/bonobo-win.c: Likewise.

	* bonobo/bonobo-ui-sync-menu.h: #include <gtk/gtkmenubar.h>.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-ui-main.[ch]: New files.
	(bonobo_ui_init, bonobo_ui_init_full): New functions to
	initialize libbonoboui.
	(bonobo_setup_x_error_handler): Moved here from libbonobo.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* tests/*.c: Make the tests actually work.

	* Makefile.am (SUBDIRS): Added tests/.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* bonobo/libbonoboui-2.0.pc.in: Make this actually work.

2001-04-25  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-dock.[ch], bonobo/bonobo-dock-item.[ch],
	bonobo/bonobo-dock-band.[ch], bonobo/bonobo-dock-layout.[ch]:
	Moved here from libgnomeui/libgnomeui/gnome-dock*.[ch] and
	renamed from GnomeDock -> BonoboDock.

	* bonobo/bonobo-ui-sync-toolbar.[ch], bonobo/bonobo-win.c:
	s/GnomeDock/BonoboDock/g; s/gnome_dock/bonobo_dock/g;.

2001-04-24  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-ui-sync-menu.c (impl_bonobo_ui_sync_menu_state):
	Use GtkImageMenuItem instead of GtkPixmapMenuItem.
	(impl_bonobo_ui_sync_menu_state): Comment out accelerator stuff.

	* bonobo/bonobo-ui-sync-toolbar.c
	(cmd_get_toolbar_pixbuf): Renamed to cmd_get_toolbar_image() and let
	it return a GtkWidget.

	* bonobo/bonobo-ui-toolbar-button-item.c
	(create_pixmap_widget_from_pixbuf): Removed.
	(set_icon): Renamed to set_image() and let it return a GtkWidget.
