@@ -1,5 +1,10 @@
 2001-05-01  Martin Baulig  <baulig@suse.de>
 
+	* libbonoboui.h: Don't #include bonobo-print.h and
+	bonobo-print-client.h for the moment.
+
+2001-05-01  Martin Baulig  <baulig@suse.de>
+
 	* bonobo/bonobo-win.c (construct_priv): #ifdef FIXME call
 	to gtk_menu_bar_set_shadow_type().
 
